--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.73.0"
+    "react-native": "0.73.0",
+    "react-native-snackbar": "^2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -26,6 +27,10 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro": "^0.80.9",
+    "metro-config": "^0.80.9",
+    "metro-resolver": "^0.80.9",
+    "metro-runtime": "^0.80.9",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
